--- a/.github/workflows/terraform-plan-apply.yml
+++ b/.github/workflows/terraform-plan-apply.yml
@@ -16,8 +16,7 @@ env:
 jobs:
   terraform-plan:
     name: 'Terraform-plan'
-    runs-on: ubuntu-latest
-    environment: production   
+    runs-on: ubuntu-latest       
 
     steps:
     # Checkout the repository to the GitHub Actions runner
@@ -34,7 +33,7 @@ jobs:
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v2      
 
-     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
+    # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
       run: terraform init
     
@@ -48,3 +47,32 @@ jobs:
       with:
         name: tfplan
         path: tfplan
+
+  terraform-apply:
+    name: 'Terraform-apply'
+    runs-on: ubuntu-latest
+    needs: [terraform-plan]
+
+    steps:
+    # Checkout the repository to the GitHub Actions runner
+    - name: Checkout
+      uses: actions/checkout@v3
+
+    # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v2
+
+    # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
+    - name: Terraform Init
+      run: terraform init 
+
+    # Download saved plan from artifacts
+    - name: Terraform plan download
+      uses: actions/download-artifacts@v2
+      with:
+        name: tfplan
+        path: .
+
+    #Terraform apply
+    - name: Teraform apply
+      run: terraform apply -auto-approve tfplan      
