--- a/.github/workflows/terraform-plan-apply.yml
+++ b/.github/workflows/terraform-plan-apply.yml
@@ -68,9 +68,10 @@ jobs:
 
     # Download saved plan from artifacts
     - name: Terraform plan download
-      uses: actions/download-artifacts@v2
+      uses: actions/download-artifact@v2
       with:
-        name: tfplan        
+        name: tfplan
+        path: .       
 
     #Terraform apply
     - name: Teraform apply
